--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
   <span class='title'>
-    <h3> <%= post.title %> </h3>
+    <h3> <%= link_to "#{post.title}", post %> </h3>
   </span>
   <span class="content">
     <%= post.content %>
@@ -8,8 +8,10 @@
   <span class="timestamp">
     Posted <%= time_ago_in_words(post.created_at) %> ago.
     <% if current_user == post.author %>
+      <%= link_to "edit", edit_post_path(post) %>
       <%= link_to "delete", post, method: :delete,
                                        data: { confirm: "Deletion is permanent. Are you sure?" } %>
     <% end %>
   </span>
   <br>
+    
