--- a/app/views/users/_friends_form.html.erb
+++ b/app/views/users/_friends_form.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.is_friend? user %>
-	<%= link_to 'Unfriend', user_friend_path(user), method: :delete %>
+	<%= link_to 'Unfriend', user_friend_path(id: user.id, user_id: current_user), method: :delete %>
 <% else %>
 	<%= link_to 'Add friend', user_friends_path(user_id: current_user, friend_id: user.id), method: :create %>
 <% end %>
