--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,13 +1,14 @@
+  
+  <h1>Friends</h1>
   <% friends.each do |friend| %>
-
   <span class='title'>
-    <h3> <%= friend.profile.name %> </h3>
+    <h3> <%= link_to "#{friend.profile.name}", user_path(friend) %> </h3>
   </span>
   <span class="content">
     <%= friend.profile.blurb %>
   </span>
   <br>
-      <%= link_to "Unfriend", user_friend_path(user), method: :delete ,
+      <%= link_to "Unfriend", user_friend_path(id: user.id, user_id: current_user), method: :delete ,
                                        data: { confirm: "Are you sure you want to unfriend?" } %>
 
   </span>
