--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
-<h1><%= @user.profile.name %></h1>
+<h1>
+	<%= gravatar_for @user %>
+	<%= @user.profile.name %></h1>
 <p><%= @user.profile.blurb %></p>
+
 
 <% if @user == current_user %>
 	<%= link_to 'Edit profile', edit_profile_path(@user) %>
@@ -11,7 +14,8 @@
 	
 <% end %>
 
-	<% @requests.each do |req| %> <!-- this shows where user is the user_id, not friend_id! -->
+<% if @user == current_user %>
+	<% @requests.each do |req| %>
 	<br>
 		<%= req.id %>
 		<%= req.user.profile.name %>
@@ -19,6 +23,7 @@
 		<%= link_to 'Accept', user_friend_path(friend_id: current_user.id, user_id: req.user_id), method: 'put' %>
 	<br>
 	<% end %>
+<% end %>
 
 	<%= render @posts %>
 
